# mlex_prefect_worker

./: .env.example  README.md  prefect.yaml  pyproject.toml  requirements.txt  setup.py  start_worker.sh  start_worker_background.sh
examples/: example_job.py  run_conda_flow.py
flows/: logger.py  parent_flow.py
flows/conda/: conda_flows.py  run_conda.sh  schema.py
flows/docker/: bash_run_docker.sh  docker_flows.py  schema.py
flows/podman/: bash_run_podman.sh  podman_flows.py  schema.py
flows/slurm/: run_slurm.sh  schema.py  slurm_flows.py
