[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
    packages = ["flows/**/*"]

[project]
name = "mlexworker"
version = "0.2.1"
description = "MLexWorker is a Prefect process worker for running jobs in MLExchange"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"

dependencies = [
    "prefect==2.14.21",
    "typer<=0.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pre-commit",
    "flake8"
]
